出題数字履歴の表示機能を復活．

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
 <hr>
 <div id="result-section" class="font">
     <p id="answer-area">Answer: <span id="answer-number"></span></p>
-    <button class="btn-gradient-3d btn-blue" onclick="toggleNumberHistoryArea()">Number History</button>
+    <button id="number-history-button" class="btn-gradient-3d btn-blue" onclick="displayNumberHistoryArea()">Number History</button>
     <p id="number-history-area"><span id="number-history-display"></span></p>
     <p id="number-history-stringify"></p>
 </div>
