罫線バグを修正．

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 <div id="current-mode" class="display-none"></div>
 <div id="mode-config-area">
     <div id="addition-mode-config">
-        <div class="operation-panel float-left">
+        <div class="operation-panel">
             <div class="font">[基本設定]</div>
             <div class="config-block float-left">
                 <div class="label-area font"><label for="addition-digit">桁数</label></div>
@@ -54,7 +54,7 @@
                         class="font"> 口</span>
                 </div>
             </div>
-            <div class="config-block float-left">
+            <div class="config-block">
                 <div class="label-area font"><label for="addition-time">秒数</label></div>
                 <div class="input-area">
                     <input id="addition-time" class="input-box" type="number"><span class="font"> 秒</span>
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div id="multiplication-mode-config">
-        <div class="operation-panel float-left">
+        <div class="operation-panel">
             <div class="font">[基本設定]</div>
             <div class="config-block float-left">
                 <div class="label-area font"><label for="multiplication-digit-1">かけられる数</label></div>
@@ -96,7 +96,7 @@
                         class="font"> 口</span>
                 </div>
             </div>
-            <div class="config-block float-left">
+            <div class="config-block">
                 <div class="label-area font"><label for="multiplication-time">秒数</label></div>
                 <div class="input-area">
                     <input id="multiplication-time" class="input-box" type="number"><span class="font"> 秒</span>
