* グローバル変数の宣言方法を変更． * shortcut.js をダウンロード． * favicon.ico を作成．

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Flash Anzan</title>
+    <link rel="shortcut icon" href="image/favicon.ico" />
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="http://www.openjs.com/scripts/events/keyboard_shortcuts/shortcut.js"></script>
+    <script type="text/javascript" src="lib/shortcut.js"></script>
 </head>
 <body>
 <div class="calculate-area">
