--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Flash Anzan</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <link rel="shortcut icon" href="image/favicon.ico" />
+    <link rel="shortcut icon" href="image/favicon.ico">
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="lib/shortcut.js"></script>
 </head>
@@ -15,7 +15,7 @@
 </div>
 <hr>
 <div id="play-button-area" class="operation-panel">
-    <button id="start-button" class="btn-gradient-3d btn-orange font button" onclick="flash()">
+    <button id="start-button" class="btn-gradient-3d btn-orange font button" onclick="flash()" disabled>
         Start
     </button>
     <button id="answer-button" class="btn-gradient-3d btn-orange font button" onclick="displayAnswer()" disabled>
