--- a/src/index.html
+++ b/src/index.html
@@ -66,10 +66,17 @@
         <div class="operation-panel" style="display: none;">
             <div class="font">[高度な設定]</div>
             <div class="config-block">
-                <div class="label-area font"><label for="addition-flashrate">Flash rate</label>
+                <div class="label-area font"><label for="addition-flashRate">Flash rate</label>
                 </div>
                 <div class="input-area">
-                    <input id="addition-flashrate" class="input-box" type="number"><span class="font"> ％</span>
+                    <input id="addition-flashRate" class="input-box" type="number"><span class="font"> ％</span>
+                </div>
+            </div>
+            <div class="config-block">
+                <div class="label-area font"><label for="addition-offset">Offset</label>
+                </div>
+                <div class="input-area">
+                    <input id="addition-offset" class="input-box" type="number"><span class="font"> ms</span>
                 </div>
             </div>
         </div>
@@ -108,10 +115,17 @@
         <div class="operation-panel" style="display: none;">
             <div class="font">[高度な設定]</div>
             <div class="config-block">
-                <div class="label-area font"><label for="multiplication-flashrate">Flash rate</label>
+                <div class="label-area font"><label for="multiplication-flashRate">Flash rate</label>
                 </div>
                 <div class="input-area">
-                    <input id="multiplication-flashrate" class="input-box" type="number"><span class="font"> ％</span>
+                    <input id="multiplication-flashRate" class="input-box" type="number"><span class="font"> ％</span>
+                </div>
+                <div class="config-block">
+                    <div class="label-area font"><label for="multiplication-offset">Offset</label>
+                    </div>
+                    <div class="input-area">
+                        <input id="multiplication-offset" class="input-box" type="number"><span class="font"> ms</span>
+                    </div>
                 </div>
             </div>
         </div>
