--- a/src/index.html
+++ b/src/index.html
@@ -159,5 +159,6 @@
 </div>
 <script type="text/javascript" src="assets/globals.js?ver=0.2"></script>
 <script type="text/javascript" src="assets/index.js?ver=0.2"></script>
+<script type="text/javascript" src="assets/button_events.js?ver=0.2"></script>
 </body>
 </html>
