GitLab Pages でオーディオがキャッシュされないため、オーディオを変数に入れて所持する実装に変更。

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
 <label><input type="checkbox" id="is-muted"><span style="color: white;">Mute</span></label>
 <label>
     <select name="sound-extension" id="sound-extension" onchange="setSoundExtension(this.value);">
-        <option value=".ogg" selected>ogg</option>
-        <option value=".wav">wav</option>
+        <option value="ogg" selected>ogg</option>
+        <option value="wav">wav</option>
     </select>
 </label>
 <button id="load-params-button" onclick="loadParams();">Load</button>
