--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,11 @@
     <p id="number-history-area" class="display-none"><span id="number-history-display"></span></p>
     <p id="number-history-stringify" style="display: none;"></p>
 </div>
+<div id="input-answer-area" class="display-none">
+    <label><span style="color: darkgreen">答えを入力してください</span>
+        <input id="input-answer-box" type="number">
+    </label>
+</div>
 <p id="mode-info"></p>
 <script type="text/javascript" src="assets/globals.js?ver=0.2.3"></script>
 <script type="text/javascript" src="assets/index.js?ver=0.2.3"></script>
