--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Flash Anzan</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link rel="shortcut icon" href="image/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/index.css?ver=0.2.3">
     <script type="text/javascript" src="lib/shortcut.js"></script>
 </head>
@@ -15,42 +17,45 @@
 </div>
 <hr>
 <div id="play-button-area" class="operation-panel">
-    <button id="start-button" class="btn-gradient-3d btn-orange font button" onclick="flash()" disabled>
+    <button type="button" id="start-button" class="btn btn-lg btn-danger" onclick="flash()" disabled>
         Start
     </button>
-    <button id="repeat-button" class="btn-gradient-3d btn-orange font button" onclick="flash({repeat: true})" disabled>
+    <button type="button" id="repeat-button" class="btn btn-lg btn-danger" onclick="flash({repeat: true})" disabled>
         Repeat
     </button>
 </div>
 <hr>
-<div id="mode-button-area" class="operation-panel">
-    <button id="addition-button" class="btn-gradient-3d btn-blue font button btn-blue-active"
-            onclick="changeMode((this.id).split('-')[0]);">たし算
-    </button>
-    <button id="subtraction-button" class="btn-gradient-3d btn-blue font button"
-            onclick="changeMode((this.id).split('-')[0]);" disabled>ひき算
-    </button>
-    <button id="multiplication-button" class="btn-gradient-3d btn-blue font button"
-            onclick="changeMode((this.id).split('-')[0]);">かけ算
-    </button>
+<div id="mode-button-area" class="operation-panel btn-group" role="group" aria-label="Basic radio toggle button group">
+    <input type="radio" class="btn-check" name="btnradio"
+           id="addition-button" autocomplete="off" onclick="changeMode((this.id).split('-')[0]);">
+    <label class="btn btn-outline-primary" for="addition-button">たし算</label>
+    <input type="radio" class="btn-check" name="btnradio"
+           id="subtraction-button" autocomplete="off" onclick="changeMode((this.id).split('-')[0]);" disabled>
+    <label class="btn btn-outline-primary" for="subtraction-button">ひき算</label>
+    <input type="radio" class="btn-check" name="btnradio"
+           id="multiplication-button" autocomplete="off" onclick="changeMode((this.id).split('-')[0]);">
+    <label class="btn btn-outline-primary" for="multiplication-button">かけ算</label>
 </div>
+<button type="button" id="load-params-button" class="btn btn-light" onclick="loadParams();">Load</button>
+<button type="button" id="save-params-button" class="btn btn-light" onclick="saveParams();">Save</button>
+<button type="button" id="delete-params-button" class="btn btn-light" onclick="deleteParams();">Delete</button>
 <hr>
-<label><input type="checkbox" id="is-muted"><span style="color: white;">Mute</span></label>
-<label>
-    <select name="sound-extension" id="sound-extension" onchange="setSoundExtension(this.value);">
+<label class="operation-panel">
+    <select name="sound-extension" id="sound-extension" onchange="setSoundExtension(this.value);"
+            class="form-select" aria-label="Default select example">
         <option value="ogg" selected>ogg</option>
         <option value="wav">wav</option>
     </select>
 </label>
-<button id="load-params-button" onclick="loadParams();">Load</button>
-<button id="save-params-button" onclick="saveParams();">Save</button>
-<button id="delete-params-button" onclick="deleteParams();">Delete</button>
+<div class="btn-group" role="group" aria-label="Basic checkbox toggle button group">
+    <input type="checkbox" class="btn-check" id="is-muted" autocomplete="off">
+    <label class="btn btn-outline-secondary" for="is-muted">Mute</label>
+</div>
 <hr>
 <div id="current-mode" class="display-none"></div>
 <div id="mode-config-area">
     <div id="addition-mode-config">
         <div class="operation-panel">
-            <div class="font">[基本設定]</div>
             <div class="config-block config-block-float-left">
                 <div class="label-area font"><label for="addition-digit">桁数</label></div>
                 <div class="input-area">
@@ -74,7 +79,6 @@
     </div>
     <div id="multiplication-mode-config">
         <div class="operation-panel">
-            <div class="font">[基本設定]</div>
             <div class="config-block config-block-float-left">
                 <div class="label-area font"><label for="multiplication-digit-1">かけられる数</label></div>
                 <div class="input-area">
@@ -106,7 +110,6 @@
     </div>
 </div>
 <div id="common-more-config" class="operation-panel">
-    <div class="font">[高度な設定]</div>
     <div class="config-block">
         <div class="label-area font"><label for="common-flashRate">Flash rate</label>
         </div>
@@ -123,13 +126,13 @@
     </div>
 </div>
 <hr>
-<div id="result-saved" class="operation-panel font display-none">
+<div id="result-saved" class="operation-panel display-none">
     <p id="previous-mode" style="display: none;"></p>
     <p id="answer-area" style="display: none;">Answer: <span id="answer-number"></span></p>
-    <button id="number-history-button" class="btn-gradient-3d btn-blue"
-            onclick="displayNumberHistoryArea()">Number History
+    <button type="button" id="number-history-button" class="btn btn-info" onclick="displayNumberHistoryArea()">
+        Number History
     </button>
-    <p id="number-history-area" class="display-none"><span id="number-history-display"></span></p>
+    <p id="number-history-area" class="p-1 mb-2 bg-warning text-dark"><span id="number-history-display"></span></p>
     <p id="number-history-stringify" style="display: none;"></p>
 </div>
 <div id="input-answer-area" class="display-none">
